--- a/app/globals.css
+++ b/app/globals.css
@@ -1,107 +1,439 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 :root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+  --accent: #fbdae5;
+  --accent-dark: #b92f7a;
+  --accent-dark-70: rgba(185, 47, 122, 0.7);
+  --accent-alt: #f36222;
+  --accent-alt-50: rgba(243, 98, 34, 0.5);
 }
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
-}
-
-* {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
-  padding: 0;
+  font-family: 'Montserrat', sans-serif;
+}
+
+/* Remove default margin */
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+figure,
+blockquote,
+dl,
+dd {
   margin: 0;
 }
 
-html,
+/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
+ul[role="list"],
+ol[role="list"] {
+  list-style: none;
+}
+
+/* Set core root defaults */
+html:focus-within {
+  scroll-behavior: smooth;
+}
+
+/* Set core body defaults */
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
+  min-height: 100vh;
+  text-rendering: optimizeSpeed;
+  line-height: 1.5;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+/* A elements that don't have a class get default styles */
+a:not([class]) {
+  text-decoration-skip-ink: auto;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+/* Make images easier to work with */
+img,
+picture {
+  max-width: 100%;
+  display: block;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+/* Inherit fonts for inputs and buttons */
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+
+/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
+@media (prefers-reduced-motion: reduce) {
+  html:focus-within {
+    scroll-behavior: auto;
   }
+
+  *,
+  *::before,
+  *::after {
+    animation-duration: 0.01ms !important;
+    animation-iteration-count: 1 !important;
+    transition-duration: 0.01ms !important;
+    scroll-behavior: auto !important;
+  }
+}
+
+/* nav-logo */
+.navbar✌️ {
+  position: relative;
+  width: 100%;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: left;
+  background: var(--accent);
+  z-index: 5;
+}
+
+#dropdown {
+  display: none;
+}
+
+.nav-dropdown {
+  display: flex;
+  flex-direction: column;
+}
+
+.nav-ham {
+  padding: 0px 0px 0px 20px;
+}
+
+.nav-ham img {
+  width: 50px;
+}
+
+.nav-logo {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.nav-logo img {
+  width: 100px;
+}
+
+.nav-links {
+  position: absolute;
+  top: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-evenly;
+  width: 100%;
+  background: var(--accent);
+  height: 0px;
+  overflow: hidden;
+  transition: all 0.5s ease-in;
+}
+
+.nav-links li {
+  padding: 0px 0px 0px 20px;
+  font-weight: 600;
+  font-size: 1.3rem;
+  color: var(--accent-dark);
+  list-style: none;
+}
+
+.nav-links button {
+  margin: 0px 0px 0px 20px;
+  padding: 10px 30px;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  background: var(--accent-dark);
+  font-size: 1rem;
+  font-weight: 500;
+}
+
+/* dropdown */
+
+/* checked */
+#dropdown:checked ~ .nav-links {
+  height: calc(55vh - 100px);
+  overflow-y: auto;
+}
+/* home */
+.home-main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  overflow: hidden;
+}
+/* landing page */
+
+.landing-title {
+  width: 100%;
+  height: 500px;
+  background: var(--accent);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+}
+/* art */
+.landing-art {
+  position: absolute;
+  top: 0%;
+  width: 100%;
+  height: 100%;
+}
+
+.landing-art > .big-circle {
+  width: 400px;
+  height: 400px;
+  border-radius: 50%;
+  position: absolute;
+  top: 0;
+  right: -30%;
+  background: var(--accent-alt-50);
+}
+
+.landing-art > .small-circle {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  position: absolute;
+  top: 50%;
+  right: 20%;
+  background: var(--accent-dark-70);
+  overflow: hidden;
+  padding: 15px;
+}
+
+.landing-art > .small-circle > img {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.landing-main {
+  width: 90%;
+  position: absolute;
+  top: 20%;
+  z-index: 2;
+}
+.landing-main > span {
+  text-align: left;
+}
+
+.landing-main > span > h4 {
+  margin: 0;
+  color: var(--accent-dark);
+  font-size: 1.5rem;
+  font-weight: 700;
+}
+
+.landing-main > span > h4 > p {
+  font-size: 1.5rem;
+  font-weight: 700;
+  color: black;
+  text-align: left;
+}
+
+.landing-ratings-btn {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.landing-ratings-btn > button {
+  background: var(--accent-dark);
+  border: none;
+  color: white;
+  padding: 10px 15px;
+  font-weight: 600;
+  border-radius: 5px;
+}
+
+.landing-ratings-btn > span {
+  display: flex;
+  flex-direction: column;
+  text-align: right;
+  padding: 0px 20px 0px 0px;
+}
+
+.landing-ratings-btn > span > h5 {
+  display: flex;
+  align-items: center;
+  font-size: 1rem;
+}
+
+.landing-ratings-btn > span > h5 > h6 {
+  font-size: 0.9rem;
+}
+
+/* occasion */
+.occasion-main {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+  padding: 10px;
+}
+
+.occasion-title {
+  color: var(--accent-dark);
+  font-size: 1.3rem;
+}
+
+.occasions {
+  width: 90%;
+  display: grid;
+  grid-template-rows: repeat(5, 100px);
+  align-items: center;
+  justify-items: center;
+  gap: 20px;
+}
+
+.occasion-cards {
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  overflow: hidden;
+  position: relative;
+}
+
+.occasion-cards > img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  filter: brightness(70%);
+}
+.occasion-cards > h5 {
+  position: absolute;
+  bottom: 0;
+  padding: 10px;
+  font-size: 1.2rem;
+  color: white;
+}
+
+/* best seller */
+.bestseller-main {
+  width: 100%;
+  background: var(--accent);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+  padding: 10px;
+}
+
+.bestseller-title {
+  font-size: 1.3rem;
+  color: var(--accent-dark);
+}
+
+.bestseller {
+  display: grid;
+  grid-template-columns: repeat(2, 150px);
+  grid-template-rows: repeat(2, 200px);
+  gap: 2rem 3rem;
+}
+
+.bestseller-cards {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  padding: 10px;
+  border-radius: 15px;
+  background: white;
+}
+.bestseller-cards > img {
+  width: 100px;
+}
+
+.bestseller-cards > h5 {
+  color: var(--accent-dark);
+  font-size: 1rem;
+  font-weight: 700;
+}
+
+.bestseller-cards > button {
+  border: 2px solid var(--accent-dark);
+  background: white;
+  border-radius: 10px;
+  padding: 5px 5px;
+  font-weight: 500;
+  color: black;
+  font-size: 0.8rem;
+}
+
+/* items of delight */
+
+.Itemsofdelight-main{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+  width: 100%;
+  height: 300px;
+}
+
+.Itemsofdelight-title{
+  font-size: 1.3rem ;
+  color: var(--accent-dark);
+}
+
+.Itemsofdelight-select{
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+.Itemsofdelight-select > input{
+  background: var(--accent-dark);
+  border: none;
+  color: white;
+  border-radius: 5px;
+  padding: 5px 10px;
+
+}
+.Itemsofdelight-cakes{
+  display: grid;
+  gap: 1rem;
+  grid-template-columns: 1fr;
+  overflow-x: scroll;
+  background: aqua;
+}
+.Itemsofdelight-card{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: var(--accent);
+  gap: 5px;
+  padding: 10px;
+  border-radius: 5px;
+  border: 2px solid var(--accent-dark);
+}
+
+.Itemsofdelight-card > img{
+  width: 100px;
+}
+
+.Itemsofdelight-card > h5{
+  font-size: 1rem;
+  font-weight: 600;
+  color: var(--accent-dark);
+}
+
+.Itemsofdelight-card > button{
+  color: var(--accent-dark);
+  border: none;
+  border-radius: 5px;
+  background: white;
+  font-size: .8rem;
+  padding: 5px 8px;
 }
