--- a/app/globals.css
+++ b/app/globals.css
@@ -161,13 +161,64 @@ select {
   font-weight: 500;
 }
 
-/* dropdown */
-
 /* checked */
 #dropdown:checked ~ .nav-links {
   height: calc(55vh - 100px);
   overflow-y: auto;
 }
+
+/* footer */
+.footer-main{
+  display: grid;
+  grid-template-rows: 150px 150px;
+  justify-items: center;
+  background: var(--accent);
+  position: relative;
+  height: 300px;
+}
+
+.footer-logo {
+  position: absolute;
+  top: -15%;
+  width: 150px;  
+}
+
+.footer-contact{
+  padding: 10px;
+  width: 100%;
+}
+
+.footer-contact > h4{
+  color: var(--accent-dark);
+  text-decoration: underline var(--accent-dark) 2px;
+  font-size: 1.5rem;
+}
+
+.footer-contact > span > h5{
+  color: var(--accent-dark);
+}
+.footer-links{
+  padding: 10px;
+  width: 100%;
+}
+
+.footer-links > h4{
+  color: var(--accent-dark);
+  text-decoration: underline var(--accent-dark) 2px;
+  font-size: 1.5rem;
+}
+
+.footer-links > span{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+}
+
+.footer-links > span > a{
+  color: var(--accent-dark);
+  text-decoration: none;
+}
+
 /* home */
 .home-main {
   display: flex;
@@ -385,7 +436,7 @@ select {
   align-items: center;
   gap: 1rem;
   width: 100%;
-  height: 300px;
+  height: 400px;
 }
 
 .Itemsofdelight-title{
@@ -412,7 +463,6 @@ select {
   gap: 1rem;
   grid-template-columns: 1fr;
   overflow-x: scroll;
-  background: aqua;
 }
 .Itemsofdelight-card{
   display: flex;
