--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 :root {
   --accent: #fbdae5;
   --accent-dark: #b92f7a;
@@ -10,7 +10,7 @@
 *::before,
 *::after {
   box-sizing: border-box;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 /* Remove default margin */
@@ -93,6 +93,7 @@ select {
   justify-content: left;
   background: var(--accent);
   z-index: 5;
+  padding: 20px;
 }
 
 #dropdown {
@@ -136,7 +137,7 @@ select {
   transition: all 0.5s ease-in;
 }
 
-.nav-links > img{
+.nav-links > img {
   position: absolute;
   width: 300px;
   right: -22%;
@@ -149,6 +150,7 @@ select {
   font-size: 1.3rem;
   color: var(--accent-dark);
   list-style: none;
+  cursor: pointer;
 }
 
 .nav-links button {
@@ -160,6 +162,7 @@ select {
   background: var(--accent-dark);
   font-size: 1rem;
   font-weight: 500;
+  cursor: pointer;
 }
 
 /* checked */
@@ -168,8 +171,47 @@ select {
   overflow-y: auto;
 }
 
+@media screen and (min-width: 800px) {
+  .navbar✌️ {
+    justify-content: right;
+  }
+
+  .nav-ham {
+    display: none;
+  }
+
+  .nav-logo {
+    top: 50%;
+    left: 10%;
+    transform: translate(-50%, -50%);
+  }
+  .nav-links {
+    position: absolute;
+    top: 0;
+    flex-direction: row;
+    width: 70%;
+    height: 100px;
+    align-items: center;
+    justify-content: right;
+    padding: 0;
+    gap: 20px;
+  }
+  .nav-links > img {
+    display: none;
+  }
+  .nav-links li {
+    padding: 0px 0px 0px 0px;
+    font-size: .8rem;
+  }
+  .nav-links button{
+    margin: 0px;
+    padding: 10px 20px;
+    font-size: .8rem;
+  }
+}
+
 /* footer */
-.footer-main{
+.footer-main {
   display: grid;
   grid-template-rows: 150px 150px;
   justify-items: center;
@@ -181,41 +223,41 @@ select {
 .footer-logo {
   position: absolute;
   top: -15%;
-  width: 150px;  
+  width: 150px;
 }
 
-.footer-contact{
+.footer-contact {
   padding: 10px;
   width: 100%;
 }
 
-.footer-contact > h4{
+.footer-contact > h4 {
   color: var(--accent-dark);
   text-decoration: underline var(--accent-dark) 2px;
   font-size: 1.5rem;
 }
 
-.footer-contact > span > h5{
+.footer-contact > span > h5 {
   color: var(--accent-dark);
 }
-.footer-links{
+.footer-links {
   padding: 10px;
   width: 100%;
 }
 
-.footer-links > h4{
+.footer-links > h4 {
   color: var(--accent-dark);
   text-decoration: underline var(--accent-dark) 2px;
   font-size: 1.5rem;
 }
 
-.footer-links > span{
+.footer-links > span {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr;
 }
 
-.footer-links > span > a{
+.footer-links > span > a {
   color: var(--accent-dark);
   text-decoration: none;
 }
@@ -431,7 +473,7 @@ select {
 
 /* items of delight */
 
-.Itemsofdelight-main{
+.Itemsofdelight-main {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -440,32 +482,31 @@ select {
   height: 400px;
 }
 
-.Itemsofdelight-title{
-  font-size: 1.3rem ;
+.Itemsofdelight-title {
+  font-size: 1.3rem;
   color: var(--accent-dark);
 }
 
-.Itemsofdelight-select{
+.Itemsofdelight-select {
   display: flex;
   align-items: center;
   gap: 20px;
 }
 
-.Itemsofdelight-select > input{
+.Itemsofdelight-select > input {
   background: var(--accent-dark);
   border: none;
   color: white;
   border-radius: 5px;
   padding: 5px 10px;
-
 }
-.Itemsofdelight-cakes{
+.Itemsofdelight-cakes {
   display: grid;
   gap: 1rem;
   grid-template-columns: 1fr;
   overflow-x: scroll;
 }
-.Itemsofdelight-card{
+.Itemsofdelight-card {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -475,21 +516,21 @@ select {
   border: 2px solid var(--accent-dark);
 }
 
-.Itemsofdelight-card > img{
+.Itemsofdelight-card > img {
   width: 100px;
 }
 
-.Itemsofdelight-card > h5{
+.Itemsofdelight-card > h5 {
   font-size: 1rem;
   font-weight: 600;
   color: var(--accent-dark);
 }
 
-.Itemsofdelight-card > button{
+.Itemsofdelight-card > button {
   color: var(--accent-dark);
   border: 1px solid var(--accent-dark);
   border-radius: 5px;
   background: white;
-  font-size: .8rem;
+  font-size: 0.8rem;
   padding: 5px 8px;
 }
