--- a/app/globals.css
+++ b/app/globals.css
@@ -293,11 +293,16 @@ select {
   height: 400px;
   border-radius: 50%;
   position: absolute;
+  overflow: hidden;
   top: 0;
   right: -30%;
   background: var(--accent-alt-50);
 }
-
+.landing-art > .big-circle > img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 .landing-art > .small-circle {
   width: 200px;
   height: 200px;
