--- a/app/globals.css
+++ b/app/globals.css
@@ -431,7 +431,7 @@ select {
   flex-direction: column;
   align-items: center;
   gap: 1rem;
-  padding: 10px;
+  padding: 20px 10px;
 }
 
 .bestseller-title {
@@ -443,7 +443,7 @@ select {
   display: grid;
   grid-template-columns: repeat(2, 150px);
   grid-template-rows: repeat(2, 200px);
-  gap: 2rem 3rem;
+  gap: 2rem 2rem;
 }
 
 .bestseller-cards {
@@ -484,6 +484,7 @@ select {
   gap: 1rem;
   width: 100%;
   height: 400px;
+  padding: 20px 10px;
 }
 
 .Itemsofdelight-title {
@@ -497,13 +498,29 @@ select {
   gap: 20px;
 }
 
-.Itemsofdelight-select > input {
-  background: var(--accent-dark);
-  border: none;
-  color: white;
+/* .Itemsofdelight-select > input {
+  background: white;
+  border: 1px solid var(--accent-dark);
+  color: var(--accent-dark);
+  border-radius: 5px;
+  padding: 5px 10px;
+} */
+.Itemsofdelight-select .unselected {
+  background: white;
+  border: 1px solid var(--accent-dark);
+  color: var(--accent-dark);
   border-radius: 5px;
   padding: 5px 10px;
 }
+.Itemsofdelight-select .selected {
+  background: var(--accent-dark);
+  border: none;
+  color: white ;
+  border-radius: 5px;
+  padding: 5px 10px;
+}
+
+
 .Itemsofdelight-cakes {
   display: grid;
   gap: 1rem;
