--- a/app/globals.css
+++ b/app/globals.css
@@ -298,7 +298,7 @@ select {
   position: absolute;
   overflow: hidden;
   top: 0;
-  right: -30%;
+  right: -15%;
   background: var(--accent-alt-50);
 }
 .landing-art > .big-circle > img{
@@ -436,6 +436,9 @@ select {
   align-items: center;
   gap: 1rem;
   padding: 20px 10px;
+  background-image: url('https://res.cloudinary.com/dxi9wcchp/image/upload/v1678302566/ssbakers/cupcakesbg_hszuis.png');
+  background-position: center top;
+  background-size: contain;
 }
 
 .bestseller-title {
@@ -460,7 +463,7 @@ select {
   background: white;
 }
 .bestseller-cards > img {
-  width: 100px;
+  width: 120px;
 }
 
 .bestseller-cards > h5 {
