--- a/app/globals.css
+++ b/app/globals.css
@@ -282,6 +282,9 @@ select {
   flex-direction: column;
   align-items: center;
   position: relative;
+  background-image: url('https://res.cloudinary.com/dxi9wcchp/image/upload/v1678302566/ssbakers/cupcakesbg_hszuis.png');
+  background-position: top;
+  background-size: contain;
 }
 /* art */
 .landing-art {
